# Trivial-Code

./: README.md
Java/Android Bluetooth/: BluetoothHelper.java  MainActivity.java  PlaySound.java
Java/Basis/: Binary Search.java  Binary Tree Traversal.java  MyHashMap.java  Quick Sort.java
MATLAB/: MATLAB常用功能.m
MATLAB/AWGN信道BPSK误码率/: bpsk_main.m  error_SNR.m
MATLAB/DSB-AM与相干解调/: SNR_cal.m  add_noise.m  ~$实验报告.docx
MATLAB/EM算法解HMM模型/: 习题说明.docx
MATLAB/LMS和RLS自适应滤波器/: readme.txt
MATLAB/PCM均匀量化与A律13折线/: A13nonuni_decoder.m  A13nonuni_quantizer.m  PCM_main.m  signal_generator.m  uni_quantizer.m
MATLAB/UI稀疏矩阵预测填充/: RMSECal.m  baseline_predictor.m  convert_to_testing.m  convert_to_training.m  main_SVDplus.m  生产实习报告.docx
MATLAB/Vernam密码的破解/: ending_guess.m  fragment_guess.m  load_data.m  str.m  实验报告.docx  密文.txt
MATLAB/声源-TDE-TDOA定位/: AED_TDE.m  Kaiser_filter.m  ML_SI_TDOA.m  MLlocation.m  PHAT_GCC.m  SI_TDOA.m  angle_cal.m  beacons_init.m  d_distances_cal.m  distances_cal.m  location_main.m  location_pass.m  object_gen.m  sampling.m  sound_gen.m  sound_prop.m
MATLAB/导航信号伪码序列估计问题/: PRN_decide.m  compass_PRN_decoder.m  cut_data.m  dat_plot.m  down_convert.m  readme.md  slice_corr.m  实验报告.docx
Python/: Python常用功能.py
cpp/DoggieRobot/410c/: CMakeLists.txt
cpp/DoggieRobot/410c/src/: mainDoggieRobot.cpp
cpp/DoggieRobot/410c/src/base/bt/: bt.h
cpp/DoggieRobot/410c/src/base/comm/: pcomm_r.h  pcomm_w.h  susart.h
cpp/DoggieRobot/410c/src/base/move/: car.h  usart.h
cpp/DoggieRobot/410c/src/base/tracker/: ImgTrackerKCF.cpp  ImgTrackerKCF.hpp  kcf.h
(+693 files in other folders)
